--- a/GitInsight/GitInsight.csproj
+++ b/GitInsight/GitInsight.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
