--- a/GitInsight.Core/GitInsight.Core.csproj
+++ b/GitInsight.Core/GitInsight.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GitInsight.Entities\GitInsight.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
