--- a/GitInsight.Client/Properties/launchSettings.json
+++ b/GitInsight.Client/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64227",
+      "applicationUrl": "http://localhost:16988",
       "sslPort": 0
     }
   },
   "profiles": {
-    "BlazorApp": {
+    "GitInsight.Client": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5223",
+      "applicationUrl": "http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
