--- a/GitInsight.Server/Properties/launchSettings.json
+++ b/GitInsight.Server/Properties/launchSettings.json
@@ -1,18 +1,20 @@
-{
+﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16988",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:44932",
+      "sslPort": 44389
     }
   },
   "profiles": {
-    "GitInsight.Client": {
+    "GitInsight.Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5020",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7241;http://localhost:5123",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
